<?xml version="1.0" encoding="utf-8" ?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity"
    android:background="@color/background_color">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"

        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.414">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:contentDescription="@string/app_logo"
            android:src="@drawable/logoapp" />

        <EditText
            android:id="@+id/editTextIp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/NodeIP"
            android:inputType="text"
            android:padding="15dp"
            android:textColor="@color/textColor"
            android:textColorHint="#757681"
            android:textSize="20sp"
            android:fontFamily="@font/roboto"/>

        <EditText
            android:id="@+id/editTextPort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15sp"
            android:background="@drawable/rounded_corner"
            android:hint="@string/PortMess"
            android:inputType="number"
            android:padding="15dp"
            android:textColor="@color/textColor"
            android:textColorHint="#757681"
            android:textSize="20sp"
            android:fontFamily="@font/roboto"/>

        <Button
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:padding="18dp"
            android:text="@string/ConnectMess"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"
            android:id="@+id/buttonConnect"/>

        <Button
            android:id="@+id/buttonLog"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5sp"
            android:fontFamily="@font/roboto"
            android:padding="18dp"
            android:text="@string/logs"
            android:textSize="20sp"
            android:textStyle="bold"
            android:backgroundTint="@color/crystal_blue"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/crystal_blue"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>