<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/errorScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".AuthenticationErrorActivity">

    <!-- Error Card -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/errorCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:cardBackgroundColor="@color/white"
        app:strokeColor="@color/error_red"
        app:strokeWidth="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageView
                android:id="@+id/imageWarning"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:contentDescription="@string/alert_icon"
                android:src="@drawable/alert_error_ic"
                app:tint="@color/error_red" />

            <TextView
                android:id="@+id/textViewError"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/errorBiomMessage"
                android:textAlignment="center"
                android:textColor="@color/text_primary"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textViewDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto"
                android:text="@string/errorBiomDetail"
                android:textAlignment="center"
                android:textColor="@color/text_secondary"
                android:textSize="14sp" />

            <Button
                android:id="@+id/buttonRetry"
                style="@style/Widget.MaterialComponents.Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/crystal_blue"
                android:text="@string/retryMessage"
                android:textColor="@android:color/white"
                app:cornerRadius="24dp" />

            <Button
                android:id="@+id/buttonSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/openConf"
                android:textColor="@color/white"
                app:cornerRadius="24dp"
                app:strokeColor="@color/error_red"
                app:strokeWidth="1dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Logo in background -->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_margin="16dp"
        android:layout_marginEnd="196dp"
        android:layout_marginBottom="604dp"
        android:alpha="1"
        android:contentDescription="@string/app_logo"
        android:src="@drawable/logoapp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
